# deb_package_statistics

./: .gitignore  README.md  package_statistics.py  package_statistics_test.py  pylintrc  pyproject.toml  strings.py
docs/: requirements.md
test_data/: test_contents
