# Copyright 2023 George Ioannidis
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# Configuration file for pyink.

[tool.pyink]
pyink = true
pyink-indentation = 2
line-length = 80

[project]
name = "package_statistics"
description = "Python command line tool that displays deb package statistics for various architectures."
license = { text = "Apache 2.0" }
requires-python = ">=3.7"
readme = "README.md"
authors = [{name = "George Ioannidis", email = "gioannidis@users.noreply.github.com"}]

[project.urls]
Homepage = "https://github.com/gioannidis/deb_package_statistics"
